bin_PROGRAMS = p-load
p_load_SOURCES = p-load.c version.h message.c message.h intel_hex.c intel_hex.h \
	ploader.c ploader.h usb_system.c usb_system.h usb_system_@USB_SYSTEM_IMPL@.c \
        arg_reader.c arg_reader.h actions.c actions.h exit_codes.h
EXTRA_DIST = usb_system_linux.c usb_system_mac.c
